# quax

./: .gitignore  README.md  load_model.py  pyproject.toml  quax_e2e_model.py  quax_test.py  setup.py  test.py  test2.py
quax/: README.md  aqt_quax.py  jax2tflite.py  quantizer.py  quax.py  quax_config.py  quax_utils.py  quaxpr.py  schema_py_generated.py  tflite_numerics.py  tflite_utils.py
tests/: add_test.py  base.py  concat_test.py  conv_test.py  depthwise_conv_test.py  dims_test.py  element_math_test.py  fc_test.py  gru_test.py  mul_test.py  reshape_test.py  sigmoid_test.py  slice_idx_test.py  slice_test.py  strided_slice.py  sub_test.py  tanh_test.py  transpose_test.py
