[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "quax"
version = "0.1.0"
description = "quantized training and tflite export with jax"
authors = [
    {name = "John Connolly", email = "john.will.connolly@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.8"


dependencies = [
    "jax",
    "flax",
    "numpy",
    "aqtp",
    "flatbuffers"
]

# Optional dependencies for different use cases
# Install with: pip install -e ".[test]" or pip install -e ".[e2e]"
[project.optional-dependencies]
test = [
    "pytest",
    "tensorflow",
    "orbax-checkpoint"
]
e2e = [
    "tensorflow",
    "orbax-checkpoint",
    "absl-py",
    "optax",
    "tensorflow-datasets"
]
dev = [
    "pytest",
    "tensorflow",
    "orbax-checkpoint",
    "absl-py",
    "optax",
    "tensorflow-datasets"
]
[tool.setuptools]
packages = ["quax"]
include-package-data = true


[tool.setuptools.package-data]
quax = ["*"]

[tool.setuptools.exclude-package-data]
"*" = [ "test*.py", "*.tflite", "TODO", "README.md"]
